flutter_sfu_relay/windows/librelay.h

// Ping 回调函数类型
typedef void (*PingCallback)(const char* peerID);
// Callback function types for events
typedef void (*EventCallback)(int eventType, const char* roomId, const char* peerId, const char* data);
typedef void (*LogCallback)(int level, const char* message);
// KeepaliveGetAllPeerInfo 获取所有 Peer 心跳信息
//
extern __declspec(dllexport) char* KeepaliveGetAllPeerInfo(char* roomID);
// SetPingCallback 设置 Ping 回调
// 当需要发送 ping 时会调用此回调
//
extern __declspec(dllexport) void SetPingCallback(PingCallback callback);
// CodecGetSupportedVideo 获取支持的视频编解码器列表
//
extern __declspec(dllexport) char* CodecGetSupportedVideo(void);
// CodecGetSupportedAudio 获取支持的音频编解码器列表
//
extern __declspec(dllexport) char* CodecGetSupportedAudio(void);
// CodecParseType 解析 MimeType 获取编解码器类型
//
extern __declspec(dllexport) char* CodecParseType(char* mimeType);
// CodecIsVideo 判断是否是视频编解码器
//
extern __declspec(dllexport) int CodecIsVideo(char* codecType);
// CodecIsAudio 判断是否是音频编解码器
//
extern __declspec(dllexport) int CodecIsAudio(char* codecType);
// LiveKitBridgeCreate 创建 LiveKit 桥接器
// 返回: 0 成功, -1 失败
//
extern __declspec(dllexport) int LiveKitBridgeCreate(char* roomID);
// LiveKitBridgeConnect 连接到 LiveKit 房间 (异步)
// 立即返回，连接在后台进行
// 返回: 0 成功启动, -1 失败
//
extern __declspec(dllexport) int LiveKitBridgeConnect(char* roomID, char* url, char* token);
// LiveKitBridgeDisconnect 断开 LiveKit 连接
// 返回: 0 成功, -1 失败
//
extern __declspec(dllexport) int LiveKitBridgeDisconnect(char* roomID);
// LiveKitBridgeDestroy 销毁 LiveKit 桥接器
// 返回: 0 成功
//
extern __declspec(dllexport) int LiveKitBridgeDestroy(char* roomID);
// LiveKitBridgeGetStatus 获取桥接器状态
// 返回: JSON 字符串，需要调用 FreeString 释放
//
extern __declspec(dllexport) char* LiveKitBridgeGetStatus(char* roomID);
// LiveKitBridgeIsConnected 检查是否已连接
// 返回: 1 已连接, 0 未连接
//
extern __declspec(dllexport) int LiveKitBridgeIsConnected(char* roomID);
extern __declspec(dllexport) int ElectionEnable(int64_t relayID, char* roomID);
extern __declspec(dllexport) int ElectionDisable(int64_t relayID, char* roomID);
extern __declspec(dllexport) int ElectionUpdateCandidate(int64_t relayID, char* roomID, char* peerID, int64_t bandwidth, int64_t latency, double packetLoss);
extern __declspec(dllexport) char* ElectionTrigger(int64_t relayID, char* roomID);
extern __declspec(dllexport) char* ElectionGetProxy(int64_t relayID, char* roomID);
extern __declspec(dllexport) void SetEventCallback(EventCallback callback);
extern __declspec(dllexport) void SetLogCallback(LogCallback callback);
extern __declspec(dllexport) void SetLogLevel(int level);
extern __declspec(dllexport) void FreeString(char* s);
extern __declspec(dllexport) void CleanupAll(void);
extern __declspec(dllexport) char* GetVersion(void);
// SourceSwitcherCreate 创建源切换器
//
extern __declspec(dllexport) int SourceSwitcherCreate(char* roomID);
// SourceSwitcherDestroy 销毁源切换器
//
extern __declspec(dllexport) int SourceSwitcherDestroy(char* roomID);
// SourceSwitcherInjectSFU 注入来自 SFU 的 RTP 包
// isVideo: 1 = video, 0 = audio
// data: RTP 原始数据
// dataLen: 数据长度
//
extern __declspec(dllexport) int SourceSwitcherInjectSFU(char* roomID, int isVideo, void* data, int dataLen);