flutter_sfu_relay/lib/flutter_sfu_relay_bindings_generated.dart


  /// KeepaliveGetAllPeerInfo 获取所有 Peer 心跳信息
  ffi.Pointer<ffi.Char> KeepaliveGetAllPeerInfo(ffi.Pointer<ffi.Char> roomID) {
    return _KeepaliveGetAllPeerInfo(roomID);
  }

  late final _KeepaliveGetAllPeerInfoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('KeepaliveGetAllPeerInfo');
  late final _KeepaliveGetAllPeerInfo =
      _KeepaliveGetAllPeerInfoPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// SetPingCallback 设置 Ping 回调
  /// 当需要发送 ping 时会调用此回调
  void SetPingCallback(PingCallback callback) {
    return _SetPingCallback(callback);
  }

  late final _SetPingCallbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(PingCallback)>>(
        'SetPingCallback',
      );
  late final _SetPingCallback =
      _SetPingCallbackPtr.asFunction<void Function(PingCallback)>();

  /// CodecGetSupportedVideo 获取支持的视频编解码器列表
  ffi.Pointer<ffi.Char> CodecGetSupportedVideo() {
    return _CodecGetSupportedVideo();
  }

  late final _CodecGetSupportedVideoPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'CodecGetSupportedVideo',
      );
  late final _CodecGetSupportedVideo =
      _CodecGetSupportedVideoPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// CodecGetSupportedAudio 获取支持的音频编解码器列表
  ffi.Pointer<ffi.Char> CodecGetSupportedAudio() {
    return _CodecGetSupportedAudio();
  }

  late final _CodecGetSupportedAudioPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'CodecGetSupportedAudio',
      );
  late final _CodecGetSupportedAudio =
      _CodecGetSupportedAudioPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// CodecParseType 解析 MimeType 获取编解码器类型
  ffi.Pointer<ffi.Char> CodecParseType(ffi.Pointer<ffi.Char> mimeType) {
    return _CodecParseType(mimeType);
  }

  late final _CodecParseTypePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('CodecParseType');
  late final _CodecParseType =
      _CodecParseTypePtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// CodecIsVideo 判断是否是视频编解码器
  int CodecIsVideo(ffi.Pointer<ffi.Char> codecType) {
    return _CodecIsVideo(codecType);
  }

  late final _CodecIsVideoPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'CodecIsVideo',
      );
  late final _CodecIsVideo =
      _CodecIsVideoPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// CodecIsAudio 判断是否是音频编解码器
  int CodecIsAudio(ffi.Pointer<ffi.Char> codecType) {
    return _CodecIsAudio(codecType);
  }

  late final _CodecIsAudioPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'CodecIsAudio',
      );
  late final _CodecIsAudio =
      _CodecIsAudioPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// LiveKitBridgeCreate 创建 LiveKit 桥接器
  /// 返回: 0 成功, -1 失败
  int LiveKitBridgeCreate(ffi.Pointer<ffi.Char> roomID) {
    return _LiveKitBridgeCreate(roomID);
  }

  late final _LiveKitBridgeCreatePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'LiveKitBridgeCreate',
      );
  late final _LiveKitBridgeCreate =
      _LiveKitBridgeCreatePtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// LiveKitBridgeConnect 连接到 LiveKit 房间
  /// 返回: 0 成功, -1 失败
  int LiveKitBridgeConnect(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> url,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _LiveKitBridgeConnect(roomID, url, token);
  }

  late final _LiveKitBridgeConnectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('LiveKitBridgeConnect');
  late final _LiveKitBridgeConnect =
      _LiveKitBridgeConnectPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// LiveKitBridgeDisconnect 断开 LiveKit 连接
  /// 返回: 0 成功, -1 失败
  int LiveKitBridgeDisconnect(ffi.Pointer<ffi.Char> roomID) {
    return _LiveKitBridgeDisconnect(roomID);
  }

  late final _LiveKitBridgeDisconnectPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'LiveKitBridgeDisconnect',
      );
  late final _LiveKitBridgeDisconnect =
      _LiveKitBridgeDisconnectPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>)
      >();

  /// LiveKitBridgeDestroy 销毁 LiveKit 桥接器
  /// 返回: 0 成功
  int LiveKitBridgeDestroy(ffi.Pointer<ffi.Char> roomID) {
    return _LiveKitBridgeDestroy(roomID);
  }

  late final _LiveKitBridgeDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'LiveKitBridgeDestroy',
      );
  late final _LiveKitBridgeDestroy =
      _LiveKitBridgeDestroyPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>)
      >();

  /// LiveKitBridgeGetStatus 获取桥接器状态
  /// 返回: JSON 字符串，需要调用 FreeString 释放
  ffi.Pointer<ffi.Char> LiveKitBridgeGetStatus(ffi.Pointer<ffi.Char> roomID) {
    return _LiveKitBridgeGetStatus(roomID);
  }

  late final _LiveKitBridgeGetStatusPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('LiveKitBridgeGetStatus');
  late final _LiveKitBridgeGetStatus =
      _LiveKitBridgeGetStatusPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// LiveKitBridgeIsConnected 检查是否已连接
  /// 返回: 1 已连接, 0 未连接
  int LiveKitBridgeIsConnected(ffi.Pointer<ffi.Char> roomID) {
    return _LiveKitBridgeIsConnected(roomID);
  }

  late final _LiveKitBridgeIsConnectedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'LiveKitBridgeIsConnected',
      );
  late final _LiveKitBridgeIsConnected =
      _LiveKitBridgeIsConnectedPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>)
      >();

  int ElectionEnable(int relayID, ffi.Pointer<ffi.Char> roomID) {
    return _ElectionEnable(relayID, roomID);
  }

  late final _ElectionEnablePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Char>)>
      >('ElectionEnable');
  late final _ElectionEnable =
      _ElectionEnablePtr.asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  int ElectionDisable(int relayID, ffi.Pointer<ffi.Char> roomID) {
    return _ElectionDisable(relayID, roomID);
  }

  late final _ElectionDisablePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Int64, ffi.Pointer<ffi.Char>)>
      >('ElectionDisable');
  late final _ElectionDisable =
      _ElectionDisablePtr.asFunction<
        int Function(int, ffi.Pointer<ffi.Char>)
      >();

  int ElectionUpdateCandidate(
    int relayID,
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
    int bandwidth,
    int latency,
    double packetLoss,
  ) {
    return _ElectionUpdateCandidate(
      relayID,
      roomID,
      peerID,
      bandwidth,
      latency,
      packetLoss,
    );
  }

  late final _ElectionUpdateCandidatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Int64,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
            ffi.Int64,
            ffi.Double,
          )
        >
      >('ElectionUpdateCandidate');
  late final _ElectionUpdateCandidate =
      _ElectionUpdateCandidatePtr.asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          double,
        )
      >();

  ffi.Pointer<ffi.Char> ElectionTrigger(
    int relayID,
    ffi.Pointer<ffi.Char> roomID,
  ) {
    return _ElectionTrigger(relayID, roomID);
  }

  late final _ElectionTriggerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Pointer<ffi.Char>)
        >
      >('ElectionTrigger');
  late final _ElectionTrigger =
      _ElectionTriggerPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(int, ffi.Pointer<ffi.Char>)
      >();

  ffi.Pointer<ffi.Char> ElectionGetProxy(
    int relayID,
    ffi.Pointer<ffi.Char> roomID,
  ) {
    return _ElectionGetProxy(relayID, roomID);
  }

  late final _ElectionGetProxyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Pointer<ffi.Char>)
        >
      >('ElectionGetProxy');
  late final _ElectionGetProxy =
      _ElectionGetProxyPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(int, ffi.Pointer<ffi.Char>)
      >();

  void SetEventCallback(EventCallback callback) {
    return _SetEventCallback(callback);
  }

  late final _SetEventCallbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(EventCallback)>>(
        'SetEventCallback',
      );
  late final _SetEventCallback =
      _SetEventCallbackPtr.asFunction<void Function(EventCallback)>();

  void SetLogCallback(LogCallback callback) {
    return _SetLogCallback(callback);
  }

  late final _SetLogCallbackPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(LogCallback)>>(
        'SetLogCallback',
      );
  late final _SetLogCallback =
      _SetLogCallbackPtr.asFunction<void Function(LogCallback)>();

  void SetLogLevel(int level) {
    return _SetLogLevel(level);
  }

  late final _SetLogLevelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>('SetLogLevel');
  late final _SetLogLevel = _SetLogLevelPtr.asFunction<void Function(int)>();

  void FreeString(ffi.Pointer<ffi.Char> s) {
    return _FreeString(s);
  }

  late final _FreeStringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'FreeString',
      );
  late final _FreeString =
      _FreeStringPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void CleanupAll() {
    return _CleanupAll();
  }

  late final _CleanupAllPtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>(
    'CleanupAll',
  );
  late final _CleanupAll = _CleanupAllPtr.asFunction<void Function()>();

  ffi.Pointer<ffi.Char> GetVersion() {
    return _GetVersion();
  }

  late final _GetVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'GetVersion',
      );
  late final _GetVersion =
      _GetVersionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// SourceSwitcherCreate 创建源切换器
  int SourceSwitcherCreate(ffi.Pointer<ffi.Char> roomID) {
    return _SourceSwitcherCreate(roomID);
  }

  late final _SourceSwitcherCreatePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'SourceSwitcherCreate',
      );
  late final _SourceSwitcherCreate =
      _SourceSwitcherCreatePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>)
      >();

  /// SourceSwitcherDestroy 销毁源切换器
  int SourceSwitcherDestroy(ffi.Pointer<ffi.Char> roomID) {
    return _SourceSwitcherDestroy(roomID);
  }

  late final _SourceSwitcherDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'SourceSwitcherDestroy',
      );
  late final _SourceSwitcherDestroy =
      _SourceSwitcherDestroyPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>)
      >();

  /// SourceSwitcherInjectSFU 注入来自 SFU 的 RTP 包
  /// isVideo: 1 = video, 0 = audio
  /// data: RTP 原始数据
  /// dataLen: 数据长度
  int SourceSwitcherInjectSFU(
    ffi.Pointer<ffi.Char> roomID,
    int isVideo,
    ffi.Pointer<ffi.Void> data,
    int dataLen,
  ) {
    return _SourceSwitcherInjectSFU(roomID, isVideo, data, dataLen);
  }
